# deadrat_bot_framework

./: .gitignore  404.html  LICENSE  README.md  example_bot.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  readme.md  reference.html
.github/workflows/: publish.yml
docs/: index.md  reference.md
search/: search_index.json
src/deadrat/: __init__.py
tests/: tests.py
