[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deadrat"
version = "0.0.2"
description = "A Python wrapper for the DeadRat Bot API"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Rainy351", email = "rainy3510@gmail.com" },
]
dependencies = [
    "requests>=2.25.0",
]

[project.urls]
Homepage = "https://github.com/rerufa/deadrat_bot_framework"
Documentation = "https://rerufa.github.io/deadrat_bot_framework/"

[tool.hatch.build.targets.wheel]
packages = ["src/deadrat"]